@@ -1,3 +1,9 @@
+2005-01-09  Jorn Baayen  <jbaayen@gnome.org>
+
+	* POTFILES.in:
+
+	Updated.
+
 2005-01-06  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
